<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dataActivity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/main_linearLayout"
    android:orientation="vertical"
    tools:context=".DataActivity">


            <androidx.cardview.widget.CardView
                android:id="@+id/activity_dataCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/activity_dataCardView">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView"
                            style="@style/imageView"
                            android:layout_gravity="center"
                            android:contentDescription="@string/profile_image"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/imageView2"
                            app:srcCompat="@drawable/profilepic"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/imageView2"
                            style="@style/imageView"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ellipse"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/imageView3"
                            style="@style/imageView"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_baseline_person_24"
                            tools:ignore="VectorDrawableCompat"
                            android:visibility="gone"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>





                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/userNameHolder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/nameholder"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/userName_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/fontdiner_swanky"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/activity_data_phoneNumber_textView_holder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/phoneNumberHolder"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/activity_data_phoneNumber_textView_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/fontdiner_swanky"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/emailHolder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/emailHolder"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/email_textView1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/fontdiner_swanky"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/genderHolder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/genderHolder"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/gender_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/fontdiner_swanky"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/zuri_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/zuri"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

</LinearLayout>